--- a/client-frontend/src/component/addUser/AddUser.css
+++ b/client-frontend/src/component/addUser/AddUser.css
@@ -21,3 +21,30 @@
     3px 3px 2px rgba(0, 0, 0, 0.7), 1px 1px 2px rgba(0, 0, 0, 0.7),
     2px 4px 9px rgba(0, 0, 0, 0.7);
 }
+
+@media (max-width: 1000px) {
+  .addUser {
+    width: 80%;
+  }
+}
+
+@media (max-width: 500px) {
+  .addUser {
+    width: 90%;
+  }
+}
+
+@media (max-width: 450px) {
+  input[type='text'] {
+    min-width: 300px;
+  }
+}
+
+@media (max-width: 360px) {
+  input[type='text'] {
+    min-width: 90%;
+  }
+  .title {
+    text-align: center;
+  }
+}
